src/rules/flake8_import_conventions/snapshots/ruff__rules__flake8_import_conventions__tests__custom.snap
---
source: src/rules/flake8_import_conventions/mod.rs
expression: diagnostics
---
- kind:
    ImportAliasIsNotConventional:
      - altair
      - alt
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 13
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - dask.array
      - da
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 17
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - dask.dataframe
      - dd
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 21
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - matplotlib.pyplot
      - plt
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 24
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - numpy
      - np
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 12
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - pandas
      - pd
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 13
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - seaborn
      - sns
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 14
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - altair
      - alt
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 21
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - matplotlib.pyplot
      - plt
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 32
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - dask.array
      - da
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 27
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - dask.dataframe
      - dd
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 28
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - numpy
      - np
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 19
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - pandas
      - pd
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 21
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - seaborn
      - sns
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 22
  fix: ~
  parent: ~

