src/rules/flake8_import_conventions/snapshots/ruff__rules__flake8_import_conventions__tests__defaults.snap
---
source: src/rules/flake8_import_conventions/mod.rs
expression: diagnostics
---
- kind:
    ImportAliasIsNotConventional:
      - altair
      - alt
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 13
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - matplotlib.pyplot
      - plt
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 24
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - numpy
      - np
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 12
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - pandas
      - pd
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - seaborn
      - sns
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 14
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - altair
      - alt
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 21
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - matplotlib.pyplot
      - plt
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 32
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - numpy
      - np
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 19
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - pandas
      - pd
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 21
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - seaborn
      - sns
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 22
  fix: ~
  parent: ~

