src/rules/flake8_import_conventions/snapshots/ruff__rules__flake8_import_conventions__tests__from_imports.snap
---
source: src/rules/flake8_import_conventions/mod.rs
expression: diagnostics
---
- kind:
    ImportAliasIsNotConventional:
      - xml.dom.minidom
      - md
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 31
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - xml.dom.minidom
      - md
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 36
  fix: ~
  parent: ~
- kind:
    ImportAliasIsNotConventional:
      - xml.dom.minidom.parseString
      - pstr
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 48
  fix: ~
  parent: ~

